14693
on 2.7.7:
```scala
scala> List(1).map(identity(_))
res4: List[Int] = List(1)

scala> List(1).map(identity)
<console>:5: error: type mismatch;
 found   : (A) => A
 required: (Int) => ?
       List(1).map(identity)
                   ^
```

if the first one works, shouldn't the second?

on trunk, same error. similar error with Map instead of List.
